<resources>
    <string name="app_name">U - Farm</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="share">Share</string>
    <string name="share_text">My profile in U_Farm App</string>
    <string name="sharing_not_available">U_Farm App</string>
    <string name="copylink">Copylink</string>
    <string name="save">Save</string>
    <string name="solutions">solutions</string>
    <string name="userprofile">UserProfile</string>
    <string name="search">Search</string>
    <string name="to_search_using_images" translatable="false">To search using images</string>
    <string name="title_activity_register" translatable="false">activity_register</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="problem1">Verticillium wit is a fungal disease that affects hundreds of species of trees shrubs, edibles and ornamentals.</string>
    <string name="solution1">Give plants good drainage and ample air circulation. To Avoid overhead watering at night; mid-morning is preferred to allow foliage to dry before evening.</string>

    <string-array name="language">
        <item>English</item>
        <item>தமிழ்</item>
        <item>हिन्दी</item>
    </string-array>
    <string name="diseases_affected_plants_image" translatable="false">diseases affected plants image</string>
    <string name="upload_a_image" translatable="false">upload a image</string>
    <string name="description" translatable="false">Description</string>
    <string name="voice_description" translatable="false">Voice Description</string>
    <string name="post_problems">Post Problems</string>
    <string name="increasing_button" translatable="false">Increasing Button</string>
    <string name="_1" translatable="false">-1</string>
    <string name="decreasing_button" translatable="false">Decreasing Button</string>
    <string name="speech_to_text" translatable="false">Speech To Text</string>
    <string name="phone_number">Phone number</string>
    <string name="work">Work</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_using_phone_number">Continue using phone number</string>
    <string name="add_solutions">Add Solutions</string>
    <string name="post_solutions">Post Solutions</string>
    <string name="problem">Problem:</string>
    <string name="menu_button" translatable="false">Menu Button</string>
    <string name="add_problems">Add Problems</string>
    <string name="farmer">Farmer</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="logout">logout</string>
    <string name="comment1" translatable="false">The given solution is very help for me. Now my plants are growing well</string>
    <string name="addcomments" translatable="false">AddComments</string>
    <string name="comments" translatable="false">Comments</string>
</resources>