<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="u_farm"
            type="com.example.u_farm.model.U_Farm" />
        <variable
            name="loginViewModel"
            type="com.example.u_farm.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_mail_24"
            app:startIconTint="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorPrimary"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:text="@={u_farm.email}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconTint="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorPrimary"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:text="@={u_farm.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/login"
            android:textColor="?attr/colorAccent"
            android:onClick="@{()->loginViewModel.login(u_farm.email,u_farm.password)}"
            android:textSize="16sp"
            app:elevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="48dp"
            app:dividerColor="?attr/colorPrimary"
            app:dividerInsetEnd="224dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <TextView
            android:layout_width="21dp"
            android:layout_height="22dp"
            android:layout_marginTop="36dp"
            android:text="@string/or"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="48dp"
            app:dividerColor="?attr/colorPrimary"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="224dp"
            app:dividerThickness="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />


        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:drawableStart="@drawable/ic_google"
            android:text="@string/continue_with_google"
            android:onClick="@{()->loginViewModel.signIn()}"
            android:textColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialDivider" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:text="@string/continue_using_phone_number"
            android:textColor="?attr/colorAccent"
            android:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"

            android:text="@string/don_t_have_a_account"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:onClick="@{()->loginViewModel.navigateToRegister()}"
            android:text="@string/register"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2"
            app:layout_constraintVertical_bias="0.046" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
