<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="u_farm"
            type="com.example.u_farm.model.U_Farm" />
        <variable
            name="registerViewModel"
            type="com.example.u_farm.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorPrimary"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:text="@={u_farm.username}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:startIconDrawable="@drawable/ic_baseline_mail_24"
            app:startIconTint="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorPrimary"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:text="@={u_farm.email}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconTint="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorPrimary"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:text="@={u_farm.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:onClick="@{()->registerViewModel.register(u_farm.username,u_farm.email,u_farm.password)}"
            android:text="@string/register"
            android:textSize="16sp"
            app:elevation="2dp"
            android:textColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_a_account"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Register"
            app:layout_constraintVertical_bias="0.048" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:text="@string/login"
            android:onClick="@{()->registerViewModel.navigateToLogin()}"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Register"
            app:layout_constraintVertical_bias="0.048" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
