<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="homeViewModel"
            type="com.example.u_farm.home.HomeViewModel" />
    </data>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/selectphoto1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_baseline_account_circle_24"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="#000000"
                    app:civ_border_width="0.5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toEndOf="@id/selectphoto1"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/postmenus1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/ic_baseline_more_horiz_24"
                    android:backgroundTint="?attr/colorAccent"
                    android:contentDescription="@string/menu_button" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <!-- Media -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="224dp"
                    android:contentDescription="@string/diseases_affected_plants_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/plantdiseases" />

                <!-- Title, secondary and supporting text -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/problem"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="224dp"
                    android:text="@string/problem1"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/btn_asset_photo1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </LinearLayout>
        </LinearLayout>


</layout>