<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="data"
            type="com.example.u_farm.model.Comments" />
        <variable
            name="clicklistener"
            type="com.example.u_farm.home.CommentsListener" />

    </data>

<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:id="@+id/card6"-->
<!--        app:cardElevation="25dp"-->
<!--        android:background="?attr/colorSecondary"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp">-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectphoto5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:civ_border_color="#000000"
            app:civ_border_width="0.5dp"
            android:layout_marginTop="8dp"
            app:imageUrl="@{data.profilePicture}"
            app:layout_constraintStart_toStartOf="@id/left_well"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/plantdiseases" />

        <TextView
            android:id="@+id/username1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/selectphoto5"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:userDetails="@{data.username}"
            tools:text="@string/name"
            app:layout_constraintStart_toEndOf="@id/selectphoto5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/commentstatement"/>

             <TextView
                        android:id="@+id/commentstatement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"
                        tools:text="@string/comment1"
                        app:userDetails="@{data.commentStatement}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/left_well"
                        app:layout_constraintTop_toBottomOf="@id/selectphoto5"
                        app:layout_constraintEnd_toStartOf="@id/floating_action_button6"/>

        <ImageButton
            android:id="@+id/floating_action_button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{()->clicklistener.onClick(data)}"
            android:background="@android:color/transparent"
            android:contentDescription="@string/speech_to_text"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            app:elevation="25dp"
            app:layout_constraintTop_toBottomOf="@id/selectphoto5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right_well"
            app:layout_constraintStart_toEndOf="@id/commentstatement" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentx" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
